--- a/test.html
+++ b/test.html
@@ -4,6 +4,14 @@
 	<meta charset="UTF-8">
 	<title>测试</title>
 	<style type="text/css">
+	.div{
+		width: 200px;
+		height: 300px;
+		background: yellow;
+		position: absolute;
+		left: 20px;
+		top: 200px;
+	}
 	#div{
 		width: 200px;
 		height: 300px;
@@ -15,7 +23,9 @@
 	</style>
 </head>
 <body>
-	<div id="div"></div>
+<!-- sssssss -->
+	<div class ="div">111111</div>
+	<div class ="div"></div>
 	<span id="span"></span>
 	<h1 id="h1"></h1>
 	<ul>
@@ -24,11 +34,11 @@
 
 </body>
 <script type="text/javascript">
-	window.onload=function(){
-		var divs=document.getElementById('div')
-          alert(document.body.scrollLeft)
+// 	window.onload=function(){
+// var el=document.querySelectorAll("#div")
+// console.log(el)
 		
-	}
+	// }
 
 </script>
 </html>
